--- a/src/main/webapp/templates/movie.html
+++ b/src/main/webapp/templates/movie.html
@@ -3,7 +3,8 @@
 
 <head th:replace="~{fragments/frontend::head}">
     <link th:href="@{/css/main.css}" href="../css/main.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <div class="row  mt-3">
         <div class="col-md-8 order-md-1 order-2">
             <hr>
-            &#x1F39E <b>Genres:</b> <span class="text-primary" th:each="text,iterStat : *{genres}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Action, Crime, Drama</span>
+            🎞 <b>Genres:</b> <span class="text-primary" th:each="text,iterStat : *{genres}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Action, Crime, Drama</span>
 
             <div th:if="*{fullplot!=null}">
                 <hr>
@@ -25,45 +26,45 @@
             </div>
 
             <hr>
-            &#127916 <b>Director:</b> <span class="text-primary" th:each="text,iterStat : *{directors}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">James</span>
+            🎬 <b>Director:</b> <span class="text-primary" th:each="text,iterStat : *{directors}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">James</span>
             <div th:if="*{writers!=null}">
                 <hr>
-                &#9997 <b>Writers:</b> <span class="text-primary" th:each="text,iterStat : *{writers}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">David, Peter</span>
+                ✍ <b>Writers:</b> <span class="text-primary" th:each="text,iterStat : *{writers}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">David, Peter</span>
             </div>
             <hr>
-            &#127775 <b>Stars:</b> <span class="text-primary" th:each="text,iterStat : *{cast}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
+            🌟 <b>Stars:</b> <span class="text-primary" th:each="text,iterStat : *{cast}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
 
             <hr>
-            &#127758<b>Languages:</b> <span class="text-primary" th:each="text,iterStat : *{languages}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
-            &#128506<b>Countries:</b> <span class="text-primary" th:each="text,iterStat : *{countries}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">USA, UK</span>
+            🌎 <b>Languages:</b> <span class="text-primary" th:each="text,iterStat : *{languages}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">Tom Hanks, Leonardo</span>
+            🗺 <b>Countries:</b> <span class="text-primary" th:each="text,iterStat : *{countries}" th:text="${text}+ ${!iterStat.last ? ', ' : ''}">USA, UK</span>
 
             <hr>
-            &#127942<b>Awards:</b> <span th:text="*{awards.text}">Awards</span>
+            🏆 <b>Awards:</b> <span th:text="*{awards.text}">Awards</span>
 
-            <div th:if="*{tomatoes.critic!=null}">
+            <div th:if="*{tomatoes!=null && tomatoes.critic!=null}">
                 <hr>
-                &#127813<b>Tomatometer rating:</b> <span th:text="*{tomatoes.critic.rating}">8.8 </span> (<span th:text="*{tomatoes.critic.numReviews}">20</span> reviews)
-                &#127871<b>Audience rating:</b> <span th:text="*{tomatoes.viewer.rating}">8.8 </span> (<span th:text="*{tomatoes.viewer.numReviews}">20</span> reviews)
+                🍅 <b>Tomatometer rating:</b> <span th:text="*{tomatoes.critic.rating}">8.8 </span> (<span th:text="*{tomatoes.critic.numReviews}">20</span> reviews)
+                🍿 <b>Audience rating:</b> <span th:text="*{tomatoes.viewer.rating}">8.8 </span> (<span th:text="*{tomatoes.viewer.numReviews}">20</span> reviews)
             </div>
 
             <div th:if="*{imdb.rating>0}">
                 <hr>
-                &#128077 <b>IMDB:</b> <span th:text="*{imdb.rating}">8.8 </span> (<span th:text="*{imdb.votes}">20</span> votes)
+                👍 <b>IMDB:</b> <span th:text="*{imdb.rating}">8.8 </span> (<span th:text="*{imdb.votes}">20</span> votes)
             </div>
+
             <hr>
             <div class="card shadow-0 border mt-5" style="background-color: #f0f2f5;">
                 <div class="card-body p-4">
                     <h5 class="mb-4"> Comments (<span th:text="*{num_mflix_comments}">20</span>)</h5>
                     <div class="form-outline mb-4">
-                        <form class="d-flex" method="post" th:action="@{/comment(action=addComment)}">
+                        <form class="d-flex user d-none" method="post" th:action="@{/comment(action=addComment)}">
                             <input type="hidden" th:value="*{id}" name="movie_id"/>
-                            <div class="ps-0"><input type="text" class="form-control" name="name" placeholder="Name"/></div>
-                            <div class="ps-2"><input type="text" class="form-control" name="email" placeholder="Email"/></div>
-                            <div class="ps-2 flex-grow-1 "><input type="text" class="form-control" name="comment" placeholder="Comment"/></div>
+                            <div class="flex-grow-1"><input type="text" class="form-control" name="comment" placeholder="Comment"/></div>
                             <div class="ps-2">
                                 <button class="btn btn-outline-success" type="submit">Send</button>
                             </div>
                         </form>
+                        <div class="text-center guest">You must be <a href="#" data-bs-toggle="modal" data-bs-target="#modal-login">logged in</a> to post a comment.</div>
                     </div>
                     <div class="card" th:each="comment:${comments}">
                         <div class="card-body">
@@ -74,7 +75,6 @@
                                     <p class="small m-0 ms-2 text-muted"><span th:text="${comment.email}">Martha@gmail.com</span></p>
                                 </div>
                                 <div class="flex-grow-1 text-end small m-0 ms-2 text-muted"><span th:text="${comment.getTimeAgo()}">32 mins ago</span></div>
-
                             </div>
 
                             <div class="mt-2"><span th:text="${comment.text}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span></div>
@@ -91,8 +91,7 @@
     </div>
 </main>
 
-<footer th:replace="~{fragments/frontend::footer}">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<footer th:insert="~{fragments/frontend::footer}">
 </footer>
 
 </body>
