--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,7 +3,7 @@
 }
 .card-img-top{
     width: 100%;
-    height: 200px;
+    height: 400px;
     object-fit: cover;
     background: gray;
 }
@@ -23,6 +23,7 @@
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
 .movie-cast{
     height: 50px;
     overflow: hidden;
@@ -31,8 +32,18 @@
     -webkit-line-clamp: 2; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
 .movie-poster{
     width: 100%;
-    max-height: 500px;
+    background: gray;
+    max-height: 600px;
+    min-height: 300px;
     object-fit: cover;
+}
+
+[class*='mdl-shadow']{
+    box-shadow: none;
+}
+.dropdown-menu-center {
+    transform: translate(-28%, 0) !important;
 }
